# git-devkit

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: on-test-failure.yml  test.yml
git_devkit/: __init__.py  badges.py  report.py
tests/: test_badges.py  test_files.py  test_github.py  test_report.py
