[project]
name = "git-devkit"
version = "1.0.0"
description = "Standalone GitHub tooling: badges, GitHub client, file and report utilities."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "python-dotenv>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["git_devkit"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
